created sidingMobileReport page and mapped of the elements